--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -20,7 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Debugging attempt
-        run: pwd && ls -lah 
+        run: pwd && ls -lahR 
       - name: Setup Go environment
         uses: actions/setup-go@v2.1.3
         with:
