--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -19,8 +19,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Debugging attempt
-        run: pwd && ls -lahR 
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Setup Go environment
         uses: actions/setup-go@v2.1.3
         with:
